--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
@@ -23,9 +23,9 @@
         <a href="${ufbDomain}/corp/index.htm" class="logo"></a>
 		<div class="nav">
 			<a href="${ufbDomain}/corp/uft_index.htm">我的账户</a>
-			<a href="javascript:;">收费明细</a>
+			<a href="${ufbDomain}/corp/uft/records.htm">收费明细</a>
 			<a href="javascript:;">分期购</a>
-			<a href="javascript:;">帮助中心</a>
+			<a href="${ufbDomain}/corp/help/about.htm">帮助中心</a>
 		</div>
     </div>
 </div>
