--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/organ/account/register.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/organ/account/register.vm
@@ -324,38 +324,6 @@
         </div>
     </div>
 </div>
-
-<!--协议-->
-<div class="bgBox"></div>
-<div class="layerpop">	
-    <b class="close"></b>
-    <div class="layerTitle">幼富通服务协议</div>
-	<div id="content_1" class="content">
-            <p>本协议是用户（以下简称“您”）与幼富通网站（网址：包括但不限于www.ufufund.com等，简称“本站”）所有者上海幼赋金融信息服务有限公司之间就幼富通网站服务等相关事宜所订立的契约，请您仔细阅读本注册协议，您点击"同意并继续"按钮后，即视为您接受并同意遵守本协议的约定。</p>
-         
-            <h4>第1条 本站服务条款的确认和接纳</h4>
-            
-            <p>1.1本站的各项电子服务的所有权和运作权归幼富通所有。您同意所有注册协议条款并完成注册程序，才能成为本站的正式用户。您确认：本协议条款是处理双方权利义务的依据，始终有效，法律另有强制性规定或双方另有特别约定的，依其规定或约定。</p>
-
-            <p>1.2您点击同意本协议的，即视为您确认自己具有享受本站服务相应的权利能力和行为能力，能够独立承担法律责任。</p>
-
-            <p>1.3您确认，如果您在18周岁以下，您只能在父母或其他监护人的监护参与下才能使用本站。</p>
-
-            <p>1.4幼富通保留在中华人民共和国大陆地区施行之法律允许的范围内独自决定拒绝服务、关闭用户账户、清除或编辑内容的权利。</p>
-
-            <p>1.5您使用本站提供的服务时，应同时接受适用于本站特定服务、活动等的准则、条款和协议（以下统称为“其他条款”）；如果以下使用条件与“其他条款”有不一致之处，则以“其他条款”为准。</p>    
-
-            <p>1.6为表述便利，产品和服务简称为“产品”或“服务”。</p>	
-
-            <h4>第2条 本站服务</h4>	
-
-            <p>2.1幼富通通过互联网依法为您提供互联网信息等服务，您在完全同意本协议及本站相关规定的情况下，方有权使用本站的相关服务。</p>
-
-            <p>2.2您必须自行准备如下设备和承担如下开支：（1）上网设备，包括并不限于电脑或者其他上网终端、调制解调器及其他必备的上网装置；（2）上网开支，包括并不限于网络接入费、上网设备租用费、手机流量费等。</p>
-
-            <p>2.2.1上网设备，包括并不限于电脑或者其他上网终端、调制解调器及其他必备的上网装置；</p>
-            <a href="javascript:;" class="btnKnow closebox">我知道了</a>
-    </div>
-    </div>
+#parse("control/organ/account/register_contract.vm")
 </body>
 </html>
