--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/contract_card.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/contract_card.vm
@@ -1,89 +1,190 @@
-<!----------------家庭用户协议------------------------->       
 <div class="bgBox"></div>	
 <!--《幼富宝服务协议》-->
 <div class="layerpop" id="ufb01">	
     <b class="close"></b>
     <div class="layerTitle">幼富宝服务协议</div>
 	<div id="content_1" class="content content_scroll">
-               <h4>幼富宝服务协议</h4>
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                    个体工商户无组织机构代码（仅支持个体工商户）<br>
-                    目前仅支持中国大陆企业；<br>
-                    注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <h4>幼富宝服务协议</h4>
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
+                <p>幼富宝服务协议（以下简称“本协议”）是上海幼赋金融信息服务有限公司（以下简称“本公司”或“幼富通”）与幼富通用户（以下简称“您”或“投资者”）就幼富宝服务相关事项所订立的有效合约。投资者通过网络页面点击确认或以其他方式选择接受本协议，即表示投资者与本公司已达成协议并同意接受本协议的全部约定内容以及与本协议有关的各项规则及本公司网站所包含的其他与本协议或本协议项下各项规则的条款和条件有关的各项规定。<br>
+                    在接受本协议之前，请您仔细阅读本协议的全部内容。如果您不同意本协议的任意内容，或者无法准确理解本公司对条款的解释，请不要进行后续操作。</p>
+                <h4>一、定义</h4>
+                <p>除本协议另有规定外，下列用语具有如下含义：<br>
+                1、幼富宝服务：指本公司为投资者提供的可以通过本公司系统与合作金融机构（包括但不限于保险公司、银行、基金公司、证券公司等，下同）系统相连，通过合作金融机构系统在本公司的网上直销自助前台系统进行相关理财产品（包括但不限于保险、基金、股票、债券等，下同）交易资金的划转、支付及在线进行理财产品交易、信息查询等服务。<br>
+                2、身份认证要素：指在交易中本公司用于识别投资者身份的信息要素，包括但不限于投资者的幼富通账户、密码、数字证书、短信校验服务、识别码、签约时设置的电话号码、手机号码等及本公司认可的其他要素。</p>
+                <h4>二、特别提示</h4>
+                <p>1、本公司有权采取各种必要手段对投资者进行身份验证，并据此决定提供服务的范围及为投资者开放服务种类、范围及进行业务操作的权限。为保障投资者资金安全，本公司有权根据投资者类别、身份认证措施、交易风险度等因素的不同设定不同的安全策略。<br>
+                2、身份认证要素是本公司识别投资者的依据，投资者必须妥善保管，不得将身份认证要素提供给任何第三方或交于任何第三方使用。使用上述身份要素所发出的一切指令均视为投资者本人所为，投资者应对此产生的后果负责。对非本公司原因造成的账户、密码等信息被冒用、盗用或非法使用，由此引起的一切风险、责任、损失、费用等应由投资者自行承担。<br>
+                3、您知晓并同意，为向您提供幼富宝服务，本公司有权将您的个人信息（包括但不限于：姓名、身份证号、手机号、邮箱、联系地址、幼富通账号等）提供给相应的金融机构。您同意相关金融机构有权将您的个人信息（包括但不限于您在金融机构的账户、交易信息、资产状况等）提供给本公司。<br>
+                4、您知晓并同意，您开通幼富宝服务的同时即开通幼富通账户。<br>
+                5、您知晓并同意，您网上提交的资金划转委托，以银行系统与本公司系统记录为准；您提交的理财产品交易委托以相应的金融机构的系统记录为准。您在幼富通可以查询到您持有理财产品的净额、收益、交易明细等，但该数据仅供参考用，所有数据应以相应的金融机构系统数据为准。<br>
+                6、本公司及其关联公司仅向投资者提供理财产品展示渠道，本公司及其关联公司并非为理财产品购买协议的参与方，不对理财产品购买协议的协议方的任何口头、书面陈述或者向幼富通网站上传的线上信息之真实性、合法性做任何明示或暗示的担保，或对此承担任何连带责任，不对相关金融机构及任何第三方的法定义务和/或契约责任承担任何连带责任。本公司亦无义务参与理财产品协议交易资金划转及支付环节之外的任何赔偿、纠纷处理等活动。<br>
+                7、您授权在您开通幼富宝服务的同时，将幼富宝所对应的银行账户增加为幼富通为您提供的各类代扣服务的扣款资金渠道之一，可使用幼富宝或幼富宝所对应的银行账户作为代扣资金渠道的具体代扣服务以幼富通实际向您提供的为准。<br>
+                8、您理解并同意，幼富通有权根据实际情况在提供具体代扣服务时决定幼富宝或幼富宝所对应的银行账户在扣款资金渠道中的顺位，具体以页面提示或幼富通网站的相关规则、解释为准。<br>
+                9、您理解并同意，当您发送代扣指令（含单笔代扣指令、预授权方式等），且该代扣指令对应的扣款渠道为幼富宝所对应的银行账户时（简称“幼富宝缴费”），即会触发幼富宝货币基金份额赎回的申请。您理解并同意自您发送“幼富宝缴费”指令之日起，您将不再承担\享有对应的幼富宝货币基金份额的损益。<br>
+                10、您理解并同意，本公司会尽最大努力为您提供资金划转服务，但本公司对资金到账时间不做任何承诺且不承担任何责任。</p>
+                <h4>三、服务对象范围</h4>
+                <p>1、幼富宝服务仅向符合中华人民共和国年满18周岁、具有完全民事权利能力和民事行为能力且持有幼富通实名账户的大陆居民提供。投资者必须按照本网站的注册要求提供本人真实、准确及完整的信息，并负责对本人信息及时更新。本公司视本网站所有用户已就上述各项条件与要求作出承诺，保证本人身份的合法性，以及所提供信息的真实性、准确性、完整性和非过时性。<br>
+                2、若您提供任何不真实、不准确、不完整或过时的身份信息，或者本公司有合理理由怀疑您所提供的信息为不真实、不准确、不完整或过时的，本公司有权中止（或终止）向您提供服务，并拒绝您现在或未来使用本服务之各项服务之全部或部分功能，对此本公司不承担任何责任。同时，因此所产生的任何直接或间接的支出、损失、费用、处罚将由您来承担。若由于您未及时更新您信息，而导致本服务无法提供或本服务的有关流程及操作发生任何错误，您不得以此为由取消交易、拒绝支付交易款项和服务手续费或采取其它不当行为，并将独立承担因此产生的所有责任和后果。</p>
+                <h4>四、幼富宝服务保障</h4>
+                <p>1、幼富宝资金划转及支付安全保障<br>
+                若您未违反《幼富通服务协议》及本协议约定且因不能归责于您的原因，同时不符合《幼富通服务协议》及本协议关于幼富通不承担法律责任的约定的情形，造成幼富宝资金划转及支付损失的（投资损失及相关金融机构造成的损失除外），您可向幼富通申请补偿。您应在知悉发生损失后及时通知幼富通并按要求提交相关的申请材料和证明文件，幼富通将通过自行补偿或保险公司赔偿的方式处理您的申请。具体处理方式由幼富通自行选择决定，幼富通承诺不会因此损害您的合法权益。如幼富通选择保险赔偿的方式，您同意委托幼富通为您向保险公司索赔，并且您承诺：资金划转及支付损失事实真实存在，保险赔偿申请材料真实、有效。不论幼富通选择何种方式保障您的幼富宝资金划转及支付安全，您同意并认可幼富通最终的补偿行为或保险赔偿行为并不代表前述损失应归责于幼富通，亦不代表幼富通须为此承担其他任何责任。您同意，幼富通在向您支付补偿的同时，即刻取得您可能或确实存在的就前述损失而产生的对第三方的所有债权及其他权利，包括但不限于就上述债权向第三方追偿的权利，且您不再就上述已经让渡给幼富通的债权向该第三方主张任何权利，亦不再就损失向幼富通主张任何权利。<br>
+                若您又从其它渠道挽回了损失的，或有新证据证明您涉嫌欺诈的，或者发生您应当自行承担责任的其他情形，您应在第一时间通知幼富通并将返还幼富通已补偿或保险公司已赔偿的款项，否则幼富通有权自行或根据保险公司委托采取包括但不限于从您全部或部分幼富通账户、幼富宝账户（含该账户之关联银行账户）划扣等方式向您进行追偿。<br>
+                2、申请补偿流程<br>
+                您应按照幼富通网站载明的流程申请补偿。</p>
+                <h4>五、系统中断或故障</h4>
+                <p>本公司系统因下列状况无法正常运作，使您无法使用或无法正常使用各项服务时，本公司不承担损害赔偿责任，该状况包括但不限于：<br>
+               （一）本公司在本网站公告之系统停机维护期间。<br>
+               （二）电信设备出现故障不能正常进行数据传输的。<br>
+               （三）因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成本公司系统障碍不能正常执行业务的。<br>
+               （四）由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面
+的问题等原因而造成的服务中断或者延迟。</p>
+                <h4>六、通知</h4>
+                <p>关于本协议条款和其他协议、告示或其他有关您使用幼富宝服务的通知，本公司将以电子形式或纸张形式通知您，包括但不限于依据您向本公司提供的电子邮件地址发送电子邮件的方式、依据投资者提供的联系地址寄送挂号信的方式、于本网站或合作伙伴网站上公布、或发送手机短信和电话通知等方式。</p>
+                <h4>七、服务费用</h4>
+                <p>您知晓并同意，本公司保留向您收取服务费的权利。一旦本公司确定收取或调整服务费收取方式及标准，将以在本公司网站发布公告的方式通知您，而不再作个别通知。</p>
+                <h4>八、一般规定</h4>
+                <p>1、本协议与本网站上其他条款和规则的名词解释、意思理解，可互相引用参照，如有不同理解，应以本协议为准。本协议未做规定的，以本公司网站上不时更新的《幼富通服务协议》为准。<br>
+                2、如果本协议条款中的部分条款被有管辖权的法院认定为违法，则并不影响其他条款的有效性。<br>
+                3、本公司保有制定和单方随时修改包括但不限于上述规则的各项规则。所有规则均构成本协议的有效组成部分。新制定和经修改的规则将在本网站上进行公布，不做逐一通知。新制定和经修改的规则一旦公布则立即生效，且对生效前的投资者同样适用。<br>
+                4、如果您就幼富宝服务中所涉及相关事宜（包括但不限于支付、资金流转、幼富通账户安全、资金及收益查询等）有任何疑问的，您可登录本公司网站（www.ufufund.com）或拨打客服热线咨询。</p>
+                <h4>九、法律适用</h4>
+                <p>1、因本协议引起的或与本协议有关的争议，均适用中华人民共和国法律。<br>
+                2、因本协议引起的或与本协议有关的争议，本公司可与投资者协商解决。协商不成的，任何一方均有权提起诉讼，并以被告住所地人民法院为第一审管辖法院。</p>
+
         <a href="javascript:;" class="btnKnow closebox">我知道了</a>
     </div>
 </div> 
+
 
 <!--《海富通基金管理有限公司网上交易直销自助式前台服务协议》-->
 <div class="layerpop" id="hft">	
     <b class="close"></b>
     <div class="layerTitle">海富通基金管理有限公司网上交易直销自助式前台服务协议</div>
 	<div id="content_1" class="content content_scroll">
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-                <p>对公账户填写（政府类型）<br>
+                <p>本协议是海富通基金管理有限公司（以下简称“本公司”或“海富通基金”）与投资者(以下简称“您”或“投资者”)就您于本公司网上交易直销自助式前台进行相关操作的有关事项所订立的有效合约。投资者通过网络页面点击确认或以其他方式选择接受本协议，即表示投资者与本公司已达成协议并同意接受本协议的全部约定内容以及与本协议有关的各项规则及本公司网站所包含的其他与本协议或本协议项下各项规则的条款和条件有关的各项规定。<br>
+                在接受本协议之前，请您仔细阅读本协议的全部内容。如果您不同意本协议的任意内容，或者无法准确理解本公司对条款的解释，请不要进行后续操作。<br>
+                为给幼富通账户个人实名用户和幼富通企业认证用户提供账户余额增值服务，海富通基金为幼富通账户个人实名用户和幼富通企业认证用户提供海富通货币基金A/B，与幼富通账户“幼富宝”服务对接。同时，为方便幼富通用户操作，海富通基金与上海幼赋金融信息服务有限公司达成合作协议，在幼富通网站（www.ufufund.com、www.ufubank.com，下同）、幼富通手机（微信或APP）客户端设置海富通基金网上交易直销自助式前台，便于幼富通账户个人实名用户和幼富通企业认证用户通过幼富通、幼富宝网站、幼富通手机客户端发起海富通基金直销账户的开立以及海富通货币基金申购、赎回的申请。<br>
+                鉴于幼富通账户个人实名用户或幼富通企业认证用户自愿接受幼富宝服务，并自愿通过海富通基金在幼富通网站、幼富宝网站及幼富通手机客户端前置的网上交易直销自助式前台进行基金开户、账户查询、发起海富通货币基金的交易申请等操作，您与海富通基金根据国家有关法律、法规及相应规定达成如下协议：</p>
+                <h4>第一条 释义</h4>
+                <p>1、网上交易直销自助式前台：是指海富通基金在幼富通网站、幼富宝网站及幼富通手机客户端内置的网上交易直销自助式前台，以下简称“网上直销自助式前台”。网上直销自助式前台的业务内容目前包括基金开户、账户登记，海富通货币基金的申购（转入）、赎回（转出和支付等）、交易申请查询、基金行情查询、份额余额查询等，其他业务开通以本公司公告为准。<br>
+                2、投资者：是指接受幼富宝服务并且申请开立海富通基金直销账户的幼富通账户个人实名用户或幼富通企业认证用户。<br>
+                3、海富通货币A：是指由海富通基金管理有限公司依法募集及管理，并于2005年01月04日正式成立的海富通货币市场基金（基金代码：519505）。海富通货币B：是指由海富通基金管理有限公司依法募集及管理，并于2006年08月01日正式成立的海富通货币市场基金（基金代码：519506）。
+                4、基金账户：是指基金注册登记机构给投资者开立的用于记录投资者持有的由该注册登记机构登记注册的开放式基金份额变动及结余情况的账户。本基金账户的注册登记机构为中国证券登记结算有限责任公司。<br>
+                5、申购：是指基金合同生效后，投资者向海富通基金提出申请购买基金份额的行为。投资者通过网上直销自助式前台提交转入申请，即为投资者向海富通基金发起基金份额申购申请。<br>
+                6、赎回：是指基金合同生效后，投资者要求海富通基金购回基金份额的行为。投资者通过网上直销自助式前台提交转出和支付等申请，即为投资者向海富通基金发起基金份额赎回申请。卖出基金份额所得款项只能到达投资者申购货币基金时对应的银行卡账户。<br>
+                7、快速转出：是指投资者通过网上直销自助式前台提交货币基金快速转出申请，申请转出货币基金份额对应款项快速（一般情况下为2小时内，最迟不超过24小时，详细到账时间以申请页面提示为准）到达投资者申购货币基金时对应的银行卡账户的业务。<br>
+                8、普通转出：是指投资者通过网上直销自助式前台提交货币基金普通转出申请，申请转出货币基金份额对应款项合理时间内（一般情况下为T+3交易日内，但详细到账时间以申请页面提示为准）到达投资者申购货币基金时对应的银行卡账户的业务。<br>
+                9、份额支付：是指投资者通过网上直销自助式前台申请使用货币基金份额进行支付的业务。<br>
+                10、身份认证要素：指在交易中幼富通及本公司用于识别投资者身份的信息要素，包括但不限于投资者的幼富通账户、密码、数字证书、动态口令、识别码、签约时设置的电话号码、手机号码等及本公司认可的其他要素。<br>
+                11、T 日是指海富通基金确认的投资者有效申请工作日。<br>
+                12、T＋n 日是指自T日起第n个工作日（不包含T 日）。<br>
+                13、开放日是指海富通基金为投资者办理基金申购、赎回等业务的工作日。<br>
+                14、D日是指自然日。</p>
+                <h4>第二条 基金账户的开立</h4>
+                <p>1、凡是年龄满18周岁并且持有18位身份证号的居民身份证、满足证券投资基金合法投资者要求的幼富通账户个人实名用户或幼富通企业认证用户可以通过网上直销自助式前台开立基金账户。凡是通过网上直销自助式前台进行开户操作的幼富通账户个人实名用户或幼富通企业认证用户，需同时接受《幼富宝服务协议》。<br>
+幼富通账户个人实名用户或幼富通企业认证用户完成直销交易账号的开立，成为海富通基金投资者。<br>
+                2、投资者首次通过网上直销自助式前台开立基金账户的，其基金账户开户申请将于T+1日确认，确认成功后，投资者将获得基金账号。投资者的基金账号开立成功与否以海富通基金确认结果为准。</p>
+                <h4>第三条 安全验证机制</h4>
+                <p>1、投资者发出的幼富宝交易指令（含实时指令及预授权指令）将被合理确信为基于投资者本人真实意思表示向海富通基金发出的指令。鉴于如果预授权指令是经投资者授权由第三方向海富通发出的指令，则投资者对该指令的真实、准确及完整性负责，且海富通基金不承担因正确执行上述指令所产生的法律后果，因此，投资者应妥善保管身份认证要素。<br>
+                2、投资者在发起赎回（转出和支付等）等类型交易申请时，需要根据网上直销自助式前台提示输入身份认证要素等信息及进行其他身份验证操作，海富通基金直销后台系统根据验证结果处理投资者的交易申请。<br>
+                3、由于投资者自身的原因导致身份认证要素泄露而引起的损失由投资者承担。</p>
                 若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
+                <h4>第四条 申购申请</h4>
+                <p>1、投资者可通过网上直销自助式前台提出海富通货币基金的申购申请。网上直销自助式前台申购单笔最高金额和每日最高金额以海富通基金业务规则的相关规定为准。<br>
+                2、投资者当日申购申请与资金支付的受理截止时间为T 日15：00，如投资者在T日15：00后进行申购资金支付，则申请将按下一个工作日的申请处理。投资者委托申请的时间以海富通基金系统自动记载时间为准。<br>
+                3、海富通基金为方便投资者，在网上直销自助式前台提供转入操作服务，投资者在进行操作时须遵守海富通基金的相应业务规则。</p>
+                <h4>第五条 赎回申请</h4>
+                <p>1、投资者可通过网上直销自助式前台提出海富通货币基金的赎回申请。赎回份额的数额限制以海富通基金业务规则的相关规定为准。<br>
+                2、投资者当日赎回申请受理截止时间为T 日15：00，如投资者在T日15：00后提交交易申请，则其申请将按下一个工作日的申请处理。投资者委托申请的时间以海富通基金系统自动记载时间为准。<br>
+                3、海富通基金为方便投资者，在网上直销自助式前台提供快速转出、普通转出和份额支付等多种操作服务，投资者可根据自己意愿并在遵守海富通基金业务规则的前提下选择相应服务。</p>
+                <h4>第六条 快速转出/份额支付申请</h4>
+                <p>1、投资者可通过网上直销自助式前台提出海富通货币基金的快速转出/份额支付申请。投资者知晓并同意，投资者D日向海富通基金提交快速转出/份额支付申请时，若申请符合业务规则的相关规定，则海富通基金受理投资者申请，同时快速转出/份额支付的份额将过户给海富通基金并进行赎回处理。从投资者提交快速转出/份额支付申请之日（自然日，含当日）起，对应过户给海富通基金的基金份额损益归海富通基金所有。<br>
+                2、因投资者的原因，包括但不限于有权机关要求冻结、扣划货币基金份额等情形，导致用于快速转出/份额支付的份额赎回申请不能及时被确认，过户给海富通基金的份额赎回款不能到账，或由于其他原因导致过户份额赎回款不能及时到账等情况，投资者应承担向海富通基金偿还过户份额对应款项及相应损失的责任。<br>
+                3、如因幼富通或者对应银行系统故障、系统升级，或投资者银行卡账户已销户、账户状态不正常（挂失、冻结），或海富通基金合作的划款银行或者支付机构暂停服务，或自然灾害等不可抗力事件，或其他不可预见的非常情况，或网络、通讯故障等非海富通基金原因导致过户份额对应的款项无法按期向投资者划付的，海富通基金不承担任何责任。<br>                
+                4、海富通基金应根据业务公告规定的开放时间提供快速转出/份额支付业务服务，海富通基金可根据业务发展需要，相应调整上述开放时间。<br>
+                5、海富通基金可根据业务情况调整海富通货币基金快速转出/份额支付业务中设定的每个投资者单笔、单日及单月限额等。海富通基金可对所有投资者的快速转出/份额支付总额设定限额，如当日快速转出/份额支付总额超过海富通基金设定的限额，海富通基金可临时暂停快速转出/份额支付业务，并视情况及时恢复该业务。<br>
+                6、此服务暂不收取服务费，海富通基金可根据业务情况决定收取服务费并调整服务费标准。</p>
+                <h4>第七条 普通转出申请</h4>
+                <p>1、投资者可通过网上直销自助式前台提出海富通货币基金的普通转出申请。投资者知晓并同意，投资者当日普通转出申请受理截止时间为T日15:00，如投资者在T日15:00后提交交易申请，则其申请将按下一个工作日的申请处理。投资者委托申请的时间以海富通基金系统自动记载时间为准。从投资者提交普通转出申请之日起，对应基金份额损益仍归投资者所有。<br>
+                2、因投资者的原因，包括但不限于有权机关要求冻结、扣划货币基金份额等情形，引发用于普通转出申请不能及时被确认，由此导致的款项不能在规定时间内到账的责任由投资者承担，海富通基金不承担任何责任。<br>
+                3、如因幼富通或者对应银行系统故障、系统升级，或投资者银行卡账户已销户、账户状态不正常（包括但不限于挂失、销户等），或海富通基金合作的划款银行或者支付机构暂停服务，或自然灾害等不可抗力事件，或其他不可预见的非常情况，或网络、通讯故障等非海富通基金原因导致申请份额对应的款项无法按期向投资者划付的，海富通基金不承担任何责任。</p>
+                <h4>第八条 变更分红方式</h4>
+                <p>投资者不能通过海富通基金网上交易直销自助式前台变更海富通货币基金的分红方式。余额宝货币基金的分红方式必须为红利再投。</p>
+                <h4>第九条 申请撤销</h4>
+                <p>交易申请确认后，海富通基金网上直销自助式前台不提供申购（转入）申请、赎回（转出、支付等）申请的撤销服务。</p>
+                <h4>第十条 账户查询</h4>
+                <p>为更好为投资者提供服务，投资者知晓并同意，海富通基金通过网上直销自助式前台为投资者提供本人的基金投资信息查询服务。</p>
+                <h4>第十一条 风险测评</h4>
+                <p>投资者知晓并同意，由于货币基金相比股票型、债券型和混合型基金，属于基金中的低风险品种，投资者具备投资低风险基金品种的风险承受能力，因此通过网上直销自助式前台进行幼富宝对接海富通货币基金的相关交易时，系统默认投资者为最低风险承受能力类型。</p>
+                <h4>第十二条 风险</h4>
+                <p>1、为确保网络传输的安全，保障投资者的利益，海富通基金对网络资料的传输采用数据加密处理，但海富通基金无法保证网上信息传输绝对安全、毫无错误或指定网址不被恶意攻击或不存在因电子病毒所导致的故障等等。如发生前述情形，海富通基金不承担任何责任，投资者须自行承担因网上交易可能导致的任何风险及损失。<br>
+                2、网上直销自助式前台的查询功能如因数据传输、更新等原因发生延误，投资者需以海富通基金记载数据为准。<br>
+                3、海富通基金有权保留投资者网上交易的相关电子数据以作为投资者交易的证明。<br>
+                4、任何通过安全验证后提交的申请都将被合理确信或视为投资者本人的真实意思表示或投资者合法授权的行为，该等行为所引起的法律后果由该投资者承担。<br>
+                5、由于提供资金结算途径的银行或第三方支付机构的系统或者人为原因，导致资金到账迟滞等问题，海富通基金将协调尽快解决，但不承担赔偿责任。<br>
+                6、因海富通基金过错原因（包括但不限于海富通系统漏洞、执行指令操作错误、记账错误等），给投资者造成的直接损失，由海富通基金承担赔偿责任。</p>
+                <h4>第十三条 客服通道</h4>
+                <p>如投资者对幼富宝对接的海富通货币基金相关事宜（包括但不限于投资风险，申购、认购及赎回流程，份额登记，分红等）有任何疑问的，可登陆海富通基金网站（http://www.hftfund.com/），或拨打海富通客服热线40088-40099咨询。</p>
+                <h4>第十四条 协议的效力及变更</h4>
+                <p>1、在不损害投资者利益的前提下，海富通基金保留修改或增补本协议内容的权利。本协议的修改文本将公告于海富通基金的网站及营业场所或以其他海富通基金认为可行的方式通知。投资者在修改通知公布之日起十日内未向海富通基金提出书面异议，视同已经得到投资者的认可，但海富通基金增加服务内容除外。<br>
+                2、本协议书签署后，若有关法律法规和《基金合同》、《招募说明书》或其他海富通基金和投资者应共同遵守的文件发生修订，本协议与之不相适应的内容及条款自行失效，但本协议其他内容和条款继续有效。<br>
+                3、本协议没有约定的，适用《海富通基金管理有限公司网上交易协议》的约定。</p>
+                <h4>第十五条 纠纷的解决办法</h4>
+                <p>双方如有争议，应尽可能通过协商、调解解决，协商、调解不成，任何一方均有权向上海仲裁委员会申请仲裁，仲裁按照该委员会届时有效的仲裁规则进行。仲裁裁决是终局的，对双方均有法律约束力。</p>
         <a href="javascript:;" class="btnKnow closebox">我知道了</a>
     </div>
 </div>     
             
-<!--《《幼富宝快捷支付服务协议》》-->
-<div class="layerpop" id="ufb02">	
-    <b class="close"></b>
-    <div class="layerTitle">《幼富宝快捷支付服务协议》</div>
-	<div id="content_1" class="content content_scroll">
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
-
-        <a href="javascript:;" class="btnKnow closebox">我知道了</a>
-    </div>
-</div>
-
 <!--《《幼富通实名认证服务协议》》-->
 <div class="layerpop" id="uft">	
     <b class="close"></b>
     <div class="layerTitle">《幼富通实名认证服务协议》</div>
 	<div id="content_1" class="content content_scroll">
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
+                <h4>一、 概述</h4>
+                <p>本规则中将上海幼赋金融信息服务有限公司简称为“本公司”，对使用本公司服务的用户简称为“您”或“幼富通用户”或“用户”。<br>
+                您确认，在您注册成为幼富通用户以接受本公司的服务，或您以其他本公司允许的方式实际使用本公司服务前，您已充分阅读、理解并接受本规则的全部内容，一旦您使用幼富通服务，即表示您同意遵循本规则之所有约定。<br>
+                本公司提醒您认真阅读、充分理解本规则各条款，特别是以粗体标注部分。如您不同意接受本规则的任意内容，或者无法准确理解相关条款含义的，请不要进行后续操作。如果您对本规则的条款有疑问的，请通过本公司客服渠道进行询问，本公司将向您解释条款内容。</p>
+                <h4>二、 关于认证服务的理解与认同</h4>
+                <p>1、在您申请认证前，您必须先注册成为幼富通用户。本公司有权采取各种必要手段（包括但不限于向第三方确认）对您的身份进行识别。但在目前的技术水平下本公司所能采取的方法有限，且在网络上进行用户身份识别存在一定的困难，因此，本公司对完成认证的用户身份的准确性和绝对真实性不做任何保证。<br>
+                2、您同意，本公司有权记录并保存您在认证中提供给本公司的信息和本公司向其他合作方获取的信息，亦有权根据本协议的约定向您或第三方提供您是否通过认证以及您的认证信息。<br>
+                3、您同意，您有义务按照本公司的要求提供本人的真实身份资料进行注册及认证，并保证诸如电子邮件地址、联系电话、联系地址、邮政编码等信息的有效性，同时也有义务在相关资料发生变更时及时通知本公司进行更新。若您提供任何错误、不实、过时或不完整资料，或本公司有合理理由怀疑该资料为错误、不实、过时或不完整的，本公司有权暂停或终止对您提供服务，或限制您幼富通账户的部分或全部功能，本公司对此不承担任何责任。<br>
+                4、除非本协议另有约定，一旦您的幼富通账户完成了认证，相关身份信息和认证结果将不能由您本人进行任何修改；如果在完成认证后，您的身份信息发生了变更，您应按本公司要求提供资料并由本公司审核后进行更新。<br>
+                5、若您未满16周岁或未满足本协议及《幼富通服务协议》规定的条件，而以不当方式注册为本公司用户或通过本公司认证的，则因此产生的一切法律责任应由您及(或)其监护人承担；因此给本公司造成损失的，该用户及（或 ）其监护人应向本公司进行赔偿。同时本公司有权随时注销该幼富通账户或释放该幼富通账户的相关身份信息或停止为其提供服务。<br>
+                6、一旦您经由幼富通网站，域名为ufubank.com；ufufund.com；（以下合称“幼富通”）提交认证服务申请并通过认证，您的海富通基金帐户、银行帐户即与您的幼富通账户之间建立一一绑定关系，您不能自行变更或解除该绑定关系，除非经由幼富通同意。<br>
+                7、本公司有权根据具体情况，而要求您提供相应的身份信息和银行账户信息的相关凭证。具体凭证的要求和标准以本服务第三条和第四条内容为准。</p>
+                <h4>三、身份信息识别</h4>
+                <p>1、中华人民共和国大陆（以下简称大陆）个人幼富通用户提供以下证件用于身份信息识别：申请认证当时处于有效期内的身份证、护照等明确标有身份证号的证件之一（需要在线上传证件时，必须是原件的彩色扫描件，或者原件的彩色数码拍摄件，第二代身份证需要同时提交正反两面）。<br>
+                2、台湾地区用户应提供有效期内的台湾居民往来大陆通行证（台胞证）和入境证明（需要同时提交公章页）。港澳用户应提供有效期内的港澳居民往来内地通行证。海外用户应提供有效期内的护照和入境证明（或中华人民共和国颁发的《外国人永久居留证》）。<br>
+                3、本公司不向未满16周岁的自然人提供认证服务。<br>
+                4、机构类幼富通用户向本公司申请认证服务时，应向本公司提供以下资料：登记证／营业执照副本、组织机构代码证、税务登记证等有效证件（以上证件必须为原件的彩色扫描件，或者是原件的彩色数码拍摄件。如果是复印件的，则须加盖公章）。<br>
+如果是法定代表人作为授权经办人申请幼富通账户的，则须提交法定代表人身份证件（身份证件的要求同本条第1款规定）；如果是非法定代表人作为授权经办人申请幼富通账户的，除了提供法定代表人身份证件外，还需要提供授权经办人的身份证件，同时提供机构类幼富通用户加盖公章的授权委托书。<br>
+                5、通过身份信息识别的幼富通用户不能自行修改已经认证的信息，包括但不限于机构／企业名称、姓名以及身份证件号码等。<br>
+                6、幼富通用户在进行找回幼富通账户密码等操作时，应按照本公司要求出示相关身份证件或其他资料，以便本公司核实用户身份。<br>
+                7、本公司有权根据实际情况而要求您补充或提供其他类型的身份凭证。</p>
+                <h4>四、银行账户识别</h4>
+                <p>1、个人幼富通用户应提供本人在大陆银行开设的人民币账号、开户名、开户银行。<br>
+                2、机构类幼富通用户应提供其在大陆银行开设的人民币账号、开户名、开户银行。<br>
+                3、幼富通用户填写的银行账户开户名必须与身份信息中的真实姓名或登记证／营业执照、组织机构代码证中的名称完全一致，所有经幼富通用户填写的资料将成为认证资料。<br>
+                4、本公司有权根据实际情况而要求您补充或提供其他类型的银行账户信息的相关凭证。</p>
+                <h4>五、特别声明</h4>
+                <p>1、身份认证信息共享<br>
+                为了使您享有便捷的服务，您经由其它网站或其他合作方向本公司提交认证申请，即表示您同意本公司为您核对所提交的全部身份信息和银行账户信息，并同意本公司将认证结果及相关身份信息提供给该网站或合作方。<br>
+                2、认证资料的管理<br>
+                您在认证时提交给本公司的认证资料，即不可撤销地授权由本公司保留。本公司承诺按照《幼富通隐私权政策》的约定保护您的相关隐私信息。</p>
+                <h4>六、第三方网站的链接</h4>
+                <p>为实现身份信息审查，幼富通网站(www.ufubank.com；www.ufufund.com)上可能包含了指向第三方网站（如网上银行网站）的链接（以下简称“链接网站”）。“链接网站”非由本公司控制，对于任何“链接网站”的内容，包含但不限于“链接网站”内含的任何链接，或“链接网站”的任何改变或更新，本公司均不予负责。自“链接网站”接收的网络传播或其它形式之传送，本公司不予负责。</p>
+                <h4>七、不得为非法或禁止的使用</h4>
+                <p>接受本协议全部的说明、条款、条件是您申请认证的先决条件。您声明并保证，您不得为任何非法或为本协议、条件及须知所禁止之目的进行认证申请。您不得以任何可能损害、使瘫痪、使过度负荷或损害其他网站或其他网站的服务或本公司或干扰他人对于幼富通认证申请的使用等方式使用认证服务。您不得经由非本公司许可提供的任何方式取得或试图取得任何资料或信息。</p>
+                <h4>八、免责条款</h4>
+                <p>您同意，在下列情形下本公司无需承担任何责任：
+                1、由于您将幼富通账户及密码告知他人或未保管好自己的账户、密码或与他人共享幼富通账户或任何其他非本公司的过错，导致您的个人资料泄露。<br>
+                2、任何由于黑客攻击、计算机病毒侵入或发作、电信部门技术调整导致之影响、因政府管制而造成的暂时性关闭、由于第三方原因(包括不可抗力，例如国际出口的主干线路及国际出口电信提供商一方出现故障、火灾、水灾、雷击、地震、洪水、台风、龙卷风、火山爆发、瘟疫和传染病流行、罢工、战争或暴力行为或类似事件等)及其他非因本公司过错而造成的认证信息泄露、丢失、被盗用或被篡改等。<br>
+                3、由于与本公司链接或合作的其它网站（如网上银行等）所造成的银行账户信息、身份信息泄露及由此而导致的任何法律争议和后果。<br>
+                4、任何幼富通用户（包括未成年人用户）向本公司提供错误、不完整、不实信息等造成不能通过认证或遭受任何其他损失，概与本公司无关。</p>
+                <h4>九、其他条款</h4>
+                <p>您同意，本公司有权随时对本协议内容进行单方面的变更，并以在www.ufubank.com 及www.ufufund.com网站公告的方式予以公布，无需另行单独通知您；若您在本协议内容变更后继续使用本服务的，表示您已充分阅读、理解并接受变更修改后的协议内容，也将遵循变更修改后的协议内容使用本服务；若您不同意变更修改后的协议内容，您应立即停止使用本服务。</p>
 
         <a href="javascript:;" class="btnKnow closebox">我知道了</a>
     </div>
-</div>
+</div>   
+
+      
