--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="b1">
 				<a href="javascript:;" class="active">机构版</a>
-				<a href="${ufbDomain}/family/index.htm">家庭版</a>
+				<a href="javascript:;">家庭版</a>
 			</div>
 			<div class="b2">
 				#if(${CUSTINFO.invnm})
@@ -20,7 +20,7 @@
 		</div>
 	</div>
     <div class="container">
-        <a href="${ufbDomain}/corp/index.htm" class="logo"></a>
+        <a href="${ufbDomain}/corp/account/index.htm" class="logo"></a>
 		<div class="nav">
 			<a href="${ufbDomain}/corp/uft/uft_index.htm">我的账户</a>
 			<a href="${ufbDomain}/corp/uft/records.htm">收费明细</a>
