--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/404.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/404.vm
@@ -25,7 +25,7 @@
 		
 		if(time--==0){
 			window.clearInterval(goToId);
-			window.top.location.href="${ufbDomain}/family/index.htm";
+			window.top.location.href="${ufbDomain}/corp/account/index.htm";
 		}
 	}
 	var goToId=window.setInterval("GoTo()",1000);
