--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
@@ -8,7 +8,14 @@
 			<div class="b2">
 				#if(${ORGINFO.operator_mobile})
 			   		<span>你好，<label>
-			   		<a href="${ufbDomain}/corp/setting/account_index.htm" class="c1">$!{ORGINFO.operator_name}</a></label></span>
+			   		#set($orgname="$!{ORGINFO.operator_name}")
+			   		#if("$!{orgname}" == "")
+			   			#set($mobile=${ORGINFO.operator_mobile})
+			   			#set($start=$mobile.substring(0,3))
+						#set($end=$mobile.substring(7,11))
+						#set($orgname="${start}****${end}")
+					#end
+			   		<a href="${ufbDomain}/corp/setting/account_index.htm" class="c1">${orgname}</a></label></span>
 			   		<a href="${ufbDomain}/corp/logout.htm" class="quit">退出</a>
 				#else
 				   <div class="b2">
